--- a/LucasVanBerkel-pset6/app/src/main/res/values/strings.xml
+++ b/LucasVanBerkel-pset6/app/src/main/res/values/strings.xml
@@ -1,19 +1,22 @@
 <resources>
-    <string name="app_name">LucasVanBerkel-pset6</string>
+    <string name="app_name">Hollywood Searcher</string>
     <string name="action_about">About</string>
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_back">Back</string>
     <string name="title_activity_individual">IndividualActivity</string>
-    <string name="title_activity_settings">SettingsActivity</string>
-    <string name="settingsUsername">Username:</string>
-    <string name="settingsUsernameHint">Required</string>
-    <string name="settingsFirstname">Firstname:</string>
-    <string name="settingsFirstnameHint">Required</string>
-    <string name="settingsLastname">Lastname:</string>
-    <string name="settingsLastnameHint">Required</string>
-    <string name="settingsAddress">Address:</string>
-    <string name="settingsAddressHint">Optional</string>
-    <string name="settingsSubmit">Submit changes</string>
+    <string name="title_activity_login">LogInActivity</string>
+    <string name="loginEmail">Email log in:</string>
+    <string name="loginEmailHint">Required</string>
+    <string name="loginPassword">Password log in:</string>
+    <string name="loginPasswordHint">Required</string>
+    <string name="signupEmail">Email sign up:</string>
+    <string name="signupEmailHint">Required</string>
+    <string name="signupPassword">Password sign up</string>
+    <string name="signUpPasswordHint">Required</string>
+    <string name="toggleButtonSignUp">To sign up</string>
+    <string name="toggleButtonLogIn">To log in</string>
+    <string name="loginButton">Log in</string>
+    <string name="signupButton">Sign up</string>
 </resources>
